[tool.poetry]
name = "abilian-sbe-demo"
version = "0.0.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]

packages = [{ include = "extranet" }]


[tool.poetry.dependencies]
python = ">=3.6.1,<4"

abilian-core = {git = "https://github.com/abilian/abilian-core.git"}
abilian-sbe = {git = "https://github.com/abilian/abilian-sbe.git"}

psycopg2-binary = "*"

# Pinned for now
closure = "==20161201"
sqlalchemy = "<1.3"
werkzeug = "<1"

# Production
gunicorn = "*"
raven = "*"

flask-env = "*"
newrelic = "*"


[tool.poetry.dev-dependencies]
# Development / testing
pytest-cov = "*"
pytest-flask = "^1.0.0"
coveralls = "*"
Flask-LinkTester = "*"
Flask-DebugToolbar = ">=0.10"
profilehooks = "*"
pre-commit = "*"

# Testing
flake8-mypy = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mastool = "*"
mccabe = "*"

# Cleanup
isort = "*"
black = { version = "*", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

