[tool.poetry]
name = "abilian-sbe-cloud"
version = "0.0.0"
authors = ["Stefane Fermigier <sf@fermigier.com>"]
homepage = "https://github.com/sfermigier/abilian-sbe-cloud"
description = "Cloud deployments for Abilian SBE"
readme = "README.rst"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "extranet" },
    { include = "tests", format = "sdist" },
]


[tool.poetry.dependencies]
python = ">=3.6.1,<4"

abilian-core = {git = "https://github.com/abilian/abilian-core.git"}
abilian-sbe = {git = "https://github.com/abilian/abilian-sbe.git"}

psycopg2-binary = "*"

# Pinned for now
closure = "==20161201"
sqlalchemy = "<1.3"
werkzeug = "<1"

# Production
gunicorn = "*"
raven = "*"

flask-env = "*"
newrelic = "*"


[tool.poetry.dev-dependencies]
# Development / testing
pytest = "*"
pytest-cov = "*"
coveralls = "*"

# Testing
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mastool = "*"
mccabe = "*"
mypy = "*"

# Formatting
isort = "*"
black = { version = "*", allow-prereleases = true }

# Flask specific
pytest-flask = "^1.0.0"
Flask-LinkTester = "*"
Flask-DebugToolbar = ">=0.10"

# Other tools
profilehooks = "*"
pre-commit = "*"
safety = "*"

# Needed for some reason
pyyaml = "*"

# Doc
restructuredtext_lint = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

